--- a/styles/style.css
+++ b/styles/style.css
@@ -11,22 +11,56 @@ body {
 }
 
 button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     height: 3.25rem;
     width: 11rem;
     border-radius: 0.5rem;
-    align-items: center;
     color: aliceblue;
     background-color: #EA3333;
     border: none;
-    /* display: flex;
-    justify-content: center;
-    padding: ; */
+    font-weight: 700;
+    transition: 500ms;
+}
+
+button:hover {
+    transform: scale(1.1);
+}
+
+h1 {
+    font-size: 40px;
+    font-weight: 800;
+}
+
+h4 {
+    font-weight: 400;
 }
 
 .find-des {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     padding: 1rem;
     border-radius: 0.5rem;
     background: rgba(255, 255, 255, 0.30);
+}
+
+
+select,
+input {
+    width: 174px;
+    height: 52px;
+    margin-right: 24px;
+    border-radius: 0.5rem;
+    border: none;
+    padding-left: 15px;
+}
+
+.find-des-opt {
+    width: 174px;
+    height: 52px;
+
 }
 
 .main-nav {
@@ -34,6 +68,10 @@ button {
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.main-nav li:hover {
+    cursor: pointer;
 }
 
 .logo {
@@ -60,20 +98,20 @@ button {
 }
 
 .section-1 {
-    /* display: flex; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
     margin-top: 50px;
     background-image: linear-gradient(180deg, rgba(19, 19, 24, 0.80) 0%, rgba(19, 19, 24, 0.00) 100%), url(/images/hero-image.png);
     width: 1170px;
     height: 500px;
     border-radius: 16px;
-    text-align: center;
-    justify-content: center;
-    /* display: block; */
+
 }
 
 .section-1-content {
-
-    border: 3px #EA3333 dotted;
+    /* border: 3px #EA3333 dotted; */
 }
 
 .section-1 h1,
@@ -89,4 +127,71 @@ h4 {
 
 .section-1 h4 {
     margin-bottom: 3rem;
+}
+
+.section-2 {
+    margin-top: 100px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.section-2-content p {
+    padding-top: 24px;
+    max-width: 580px;
+
+}
+
+.section-2-content li {
+    position: relative;
+    left: 15px;
+    max-width: 580px;
+    /* padding-left: 20px; */
+}
+
+.section-3 {
+    margin: 100px 0;
+}
+
+.section-3-texts {
+    text-align: center;
+}
+
+.section-3-texts h1,
+p {
+    margin-bottom: 30px;
+}
+
+.mcfirst,
+.mc2nd {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 1.5rem;
+}
+
+.mc3rd {
+    display: flex;
+    justify-content: space-between;
+}
+
+.section-3-content {
+    /* display: grid;
+    grid-template-columns:repeat(3, 1fr)  */
+}
+
+.section-3-content-main {
+    position: relative;
+    text-align: center;
+    color: white;
+    transition: 300ms;
+}
+
+.section-3-content-main:hover {
+    transform: scale(1.1);
+}
+
+.centered-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
