--- a/styles/style.css
+++ b/styles/style.css
@@ -110,9 +110,6 @@ input {
 
 }
 
-.section-1-content {
-    /* border: 3px #EA3333 dotted; */
-}
 
 .section-1 h1,
 h4 {
@@ -145,7 +142,7 @@ h4 {
     position: relative;
     left: 15px;
     max-width: 580px;
-    /* padding-left: 20px; */
+
 }
 
 .section-3 {
@@ -173,10 +170,7 @@ p {
     justify-content: space-between;
 }
 
-.section-3-content {
-    /* display: grid;
-    grid-template-columns:repeat(3, 1fr)  */
-}
+
 
 .section-3-content-main {
     position: relative;
@@ -194,4 +188,47 @@ p {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+
+.section-4-texts {
+    text-align: center;
+}
+.section-4-texts h1{
+    padding-bottom: 48px;
+}
+
+.s4-card {
+    border: 2px #EA3333 dotted;
+    max-width: 540px;
+    border-radius: 1rem;
+    padding-left: 2rem;
+    padding-top: 2rem;
+}
+
+.s4-card h2 {
+    padding-bottom: 10px;
+}
+
+#card1 {
+    border: 1px solid rgba(251, 181, 99, 0.20);
+    background: rgba(251, 181, 99, 0.05);
+    ;
+}
+
+#card2 {
+
+    border: 1px solid rgba(41, 206, 246, 0.20);
+    background: rgba(41, 206, 246, 0.05);
+}
+
+#card3 {
+
+    border: 1px solid rgba(233, 68, 68, 0.20);
+    background: rgba(233, 68, 68, 0.05);
+    margin: 24px auto;
+    
+}
+.s4-cm{
+    display: flex;
+    justify-content: space-between;
 }
