--- a/styles/style.css
+++ b/styles/style.css
@@ -36,9 +36,14 @@ h1 {
 h4 {
     font-weight: 400;
 }
-hr{
+
+hr {
     margin-bottom: 20px;
     color: rgba(19, 19, 24, 0.10);
+}
+
+.dropdown {
+    display: none;
 }
 
 .find-des {
@@ -77,6 +82,7 @@ input {
 .main-nav li:hover {
     cursor: pointer;
 }
+
 
 .logo {
     display: flex;
@@ -270,15 +276,16 @@ p {
     margin-top: 100px;
     display: flex;
     justify-content: space-between;
-    
+
 }
-.newslatter-card{
+
+.newslatter-card {
     display: grid;
     max-width: 380px;
     border: 1px solid #EA3333;
     border-radius: 1rem;
     padding: 50px;
-    
+
 }
 
 .newslatter-card input {
@@ -287,10 +294,12 @@ p {
     border-radius: 8px;
     background: rgba(19, 19, 24, 0.05);
 }
-.newsletter-promo{
+
+.newsletter-promo {
     position: relative;
 }
-.promo-text{
+
+.promo-text {
     padding: 50px;
     border-radius: 1rem;
     background-color: #EA3333;
@@ -301,4 +310,136 @@ p {
     transform: rotate(5deg);
 }
 
+.footer {
+    /* width: 100vw; */
+    /* width: 100vw; */
+    max-width: 100vw;
+    align-items: center;
+    text-align: center;
+    background-color: rgba(19, 19, 24, 0.05);
+}
 
+.footer-texts p {
+    margin-top: 15px;
+}
+
+.footer-texts-logo {
+    display: flex;
+    justify-content: center;
+    margin-top: 100px;
+    padding-top: 100px;
+}
+
+.footer hr {
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+.footer p {
+    padding-bottom: 20px;
+
+}
+
+@media screen and (max-width: 600px) {
+    body {
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+
+    h1 {
+        font-size: 1.5rem;
+    }
+
+    .main-nav li {
+        display: none;
+    }
+
+
+    .section-1 {
+        width: 100vw;
+        /* height: ; */
+
+    }
+
+    .section-1 h1 {
+        font-size: 1.5rem;
+        padding-top: 50px;
+        padding-bottom: 0;
+    }
+
+    /* .section-1 p{
+        padding-bottom: 0; */
+    .section-1-content {
+        width: 500px;
+    }
+
+    .find-des {
+        width: fit-content;
+        display: grid;
+        gap: 20px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .section-2 {
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    .section-3 {
+        width: 80vh;
+    }
+
+    .image-fill {
+        height: 300px;
+        width: 573px;
+        object-fit: fill;
+    }
+
+    .mcfirst,
+    .mc2nd {
+        flex-direction: column;
+        margin-bottom: 0;
+        /* width: 80vw; */
+        /* height: 300px;
+        width: 473px;
+        object-fit: cover; */
+
+    }
+
+    .mc3rd {
+        flex-direction: column;
+    }
+
+    .s4-cm {
+        flex-direction: column;
+
+    }
+
+    .section-4-texts {
+        text-align: left;
+        padding-left: 200px;
+    }
+
+    #card3 {
+        margin: 0 0;
+    }
+    .section-6{
+        flex-direction: column;
+        gap: 20px;
+    }
+    .newslatter{
+        flex-direction: column;
+        gap: 20px;
+
+    }
+
+
+
+
+
+    /* .footer{
+        display: none;
+    } */
+
+}
