--- a/styles/style.css
+++ b/styles/style.css
@@ -113,7 +113,7 @@ input {
     align-items: center;
     text-align: center;
     margin-top: 50px;
-    background-image: linear-gradient(180deg, rgba(19, 19, 24, 0.80) 0%, rgba(19, 19, 24, 0.00) 100%), url(/images/hero-image.png);
+    background-image: linear-gradient(180deg, rgba(19, 19, 24, 0.80) 0%, rgba(19, 19, 24, 0.00) 100%), url(../images/hero-image.png);
     width: 1170px;
     height: 500px;
     border-radius: 16px;
