--- a/styles/style.css
+++ b/styles/style.css
@@ -42,9 +42,6 @@ hr {
     color: rgba(19, 19, 24, 0.10);
 }
 
-.dropdown {
-    display: none;
-}
 
 .find-des {
     display: flex;
@@ -266,6 +263,10 @@ p {
     padding-bottom: 1rem;
 }
 
+.section-6-content {
+    border-radius: 2rem;
+}
+
 .btm-lg-txt {
     font-size: 1rem;
     size: 80%;
@@ -311,9 +312,7 @@ p {
 }
 
 .footer {
-    /* width: 100vw; */
-    /* width: 100vw; */
-    max-width: 100vw;
+
     align-items: center;
     text-align: center;
     background-color: rgba(19, 19, 24, 0.05);
@@ -356,7 +355,7 @@ p {
 
 
     .section-1 {
-        width: 100vw;
+        width: 90vw;
         /* height: ; */
 
     }
@@ -386,13 +385,29 @@ p {
         gap: 20px;
     }
 
+    .section-2-content {
+        max-width: 90vw;
+    }
+
     .section-3 {
-        width: 80vh;
+        width: 80vw;
+    }
+
+    .section-3-texts {
+        width: 90vw;
+
+
+    }
+
+    .section-3-content {
+        width: 90vw;
+
     }
 
     .image-fill {
+
         height: 300px;
-        width: 573px;
+        width: 90vw;
         object-fit: fill;
     }
 
@@ -417,29 +432,40 @@ p {
     }
 
     .section-4-texts {
-        text-align: left;
-        padding-left: 200px;
+        width: 90vw;
+        text-align: center;
+        
+    }
+
+    .s4-card {
+        width: 80vw;
     }
 
     #card3 {
         margin: 0 0;
     }
-    .section-6{
+
+    .section-6 {
+        max-width: 90vw;
         flex-direction: column;
         gap: 20px;
     }
-    .newslatter{
+    .section-6-content{
+        width: 80vw;
+    }
+
+    .newslatter {
         flex-direction: column;
         gap: 20px;
+        width: 90vw;
 
     }
 
-
-
-
-
-    /* .footer{
-        display: none;
-    } */
+    .footer {
+        width: 90vw;
+    }
+    .promo-text{
+        max-width: 250px;
+    }
 
 }
