--- a/styles/style.css
+++ b/styles/style.css
@@ -244,7 +244,8 @@ p {
     display: flex;
     justify-content: space-between;
 }
-.section-5-texts h1{
+
+.section-5-texts h1 {
     padding-bottom: 50px;
 }
 
@@ -284,27 +285,30 @@ p {
     background-image: url('../images/Tour-1.png');
     height: 500px;
     margin-bottom: 20px;
-    
-    
+
+
 }
+
 .deals2 {
     background-image: url('../images/Tour-2.png');
     height: 500px;
     margin-bottom: 20px;
 }
+
 .deals3 {
     background-image: url('../images/Tour-1.png');
     height: 500px;
 }
-#d1, #d3{
+
+#d1,
+#d3 {
     margin-left: 50%;
-    
-}
-#d2{
- margin-left: 10%;
+
 }
 
-
+#d2 {
+    margin-left: 10%;
+}
 
 .section-6 {
     margin-top: 100px;
@@ -373,6 +377,53 @@ p {
     bottom: 50px;
     left: 50px;
     transform: rotate(5deg);
+}
+.padding20{
+    padding-bottom: 20px;
+}
+
+.bonus {
+    margin-top: 100px;
+    height: 300px;
+    border-radius: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #D9D9D9;
+    transition: 500ms;
+}
+
+.bonus img {
+    width: 4rem;
+    height: 4rem;
+    padding: 50px auto;
+    transition: 500ms;
+}
+.bonus:hover img{
+    display: none;
+}
+
+.bonus-text{
+    text-align: center;
+    display: none;
+}
+
+
+.bonus:hover .bonus-text{
+    display: block;
+}
+
+.bonus:hover {
+    
+    background: #FFF;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25) inset;
+
+
+}
+
+
+.social-media:hover {
+    cursor: pointer;
 }
 
 .footer {
@@ -517,12 +568,16 @@ p {
     #card3 {
         margin: 0 0;
     }
-    .deals1{
+
+    .deals1 {
         /* height: 500px;
         object-fit: fill; */
 
     }
-    #d1, #d2, #d3{
+
+    #d1,
+    #d2,
+    #d3 {
         margin: 0;
     }
 
